--- a/event-management/src/app/components/create-new-event/create-new-event.component.html
+++ b/event-management/src/app/components/create-new-event/create-new-event.component.html
@@ -101,7 +101,7 @@
 </div>
 <ng-template #contentTemplate let-data>
   <div class="text-center">
-    <img src="/assets/img/success_final.png" width="40" height="40"/>
+    <img src="{{imgSrc}}" width="40" height="40"/>
     <div>
       <p class="success-text">{{ data.text }}</p>
     </div>
